feat: add more game data routes
